<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text=""
        android:paddingHorizontal="16dp"
        android:textSize="32sp"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/output"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/select" />

    <TextView
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_del"
        app:layout_constraintEnd_toEndOf="@id/input"
        app:layout_constraintStart_toStartOf="@id/input"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_A"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="hexClick"
        android:text="@string/a"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_D"
        app:layout_constraintEnd_toStartOf="@+id/button_B"
        app:layout_constraintStart_toStartOf="@+id/output"
        app:layout_constraintTop_toBottomOf="@+id/button_del" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_4"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toEndOf="@+id/button_1"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_hex"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:text="@string/hex"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_6"
        app:layout_constraintEnd_toEndOf="@+id/button_oct"
        app:layout_constraintStart_toStartOf="@+id/button_oct"
        app:layout_constraintTop_toTopOf="@+id/button_6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_0"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="@+id/button_hex"
        app:layout_constraintStart_toStartOf="@+id/button_hex"
        app:layout_constraintTop_toTopOf="@+id/button_9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_9"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_8"
        app:layout_constraintEnd_toEndOf="@+id/button_6"
        app:layout_constraintStart_toStartOf="@+id/button_6"
        app:layout_constraintTop_toTopOf="@+id/button_8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_8"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_7"
        app:layout_constraintEnd_toEndOf="@+id/button_5"
        app:layout_constraintStart_toStartOf="@+id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_7"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="@+id/button_4"
        app:layout_constraintStart_toStartOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_5"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_4"
        app:layout_constraintEnd_toEndOf="@+id/button_2"
        app:layout_constraintStart_toStartOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_1"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toEndOf="@+id/button_D"
        app:layout_constraintStart_toStartOf="@+id/button_D"
        app:layout_constraintTop_toBottomOf="@+id/button_D" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_oct"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:text="@string/oct"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="@+id/button_dec"
        app:layout_constraintStart_toStartOf="@+id/button_dec"
        app:layout_constraintTop_toTopOf="@+id/button_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_6"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_5"
        app:layout_constraintEnd_toEndOf="@+id/button_3"
        app:layout_constraintStart_toStartOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="@+id/button_5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dec"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:text="@string/_dec"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_F"
        app:layout_constraintEnd_toEndOf="@+id/button_bin"
        app:layout_constraintStart_toStartOf="@+id/button_bin"
        app:layout_constraintTop_toTopOf="@+id/button_F" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_2"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_1"
        app:layout_constraintEnd_toEndOf="@+id/button_E"
        app:layout_constraintStart_toStartOf="@+id/button_E"
        app:layout_constraintTop_toTopOf="@+id/button_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_3"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="click"
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="@+id/button_F"
        app:layout_constraintStart_toStartOf="@+id/button_F"
        app:layout_constraintTop_toTopOf="@+id/button_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_bin"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:text="@string/bin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_C"
        app:layout_constraintEnd_toEndOf="@+id/output"
        app:layout_constraintStart_toEndOf="@+id/button_C"
        app:layout_constraintTop_toTopOf="@+id/button_C" />

    <ImageView
        android:id="@+id/button_del"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_backspace_24"
        app:layout_constraintBottom_toTopOf="@+id/button_bin"
        app:layout_constraintEnd_toEndOf="@+id/button_bin"
        app:layout_constraintTop_toBottomOf="@+id/output"
        android:contentDescription="TODO" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_F"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="hexClick"
        android:text="@string/f"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_E"
        app:layout_constraintEnd_toEndOf="@+id/button_C"
        app:layout_constraintStart_toStartOf="@+id/button_C"
        app:layout_constraintTop_toTopOf="@+id/button_E" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_C"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="hexClick"
        android:text="@string/c"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_B"
        app:layout_constraintEnd_toStartOf="@+id/button_bin"
        app:layout_constraintStart_toEndOf="@+id/button_B"
        app:layout_constraintTop_toTopOf="@+id/button_B" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_E"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="hexClick"
        android:text="@string/e"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_D"
        app:layout_constraintEnd_toEndOf="@+id/button_B"
        app:layout_constraintStart_toStartOf="@+id/button_B"
        app:layout_constraintTop_toTopOf="@+id/button_D" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_D"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="hexClick"
        android:text="@string/d"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toEndOf="@+id/button_A"
        app:layout_constraintStart_toStartOf="@+id/button_A"
        app:layout_constraintTop_toBottomOf="@+id/button_A" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_B"
        android:layout_width="@dimen/_65dp"
        android:layout_height="@dimen/_65dp"
        android:background="@drawable/button"
        android:onClick="hexClick"
        android:text="@string/b"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_A"
        app:layout_constraintEnd_toStartOf="@+id/button_C"
        app:layout_constraintStart_toEndOf="@+id/button_A"
        app:layout_constraintTop_toTopOf="@+id/button_A" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04136253" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.056737587" />

    <Spinner
        android:id="@+id/select"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:entries="@array/numSystem"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9243499" />

</androidx.constraintlayout.widget.ConstraintLayout>